Fix bug 169235: Changing enconding for icq crashes kopete. Filter out unavailable encodings.

BUG:169235


svn path=/trunk/KDE/kdenetwork/kopete/; revision=858254